<resources>
  <string name="empty"/>
  <string name="app_name">TrackPacer</string>

  <string name="title_run">Run</string>
  <string name="title_pace">Pace</string>
  <string name="title_completion">Completion</string>

  <string name="title_history">History</string>
  <string name="title_clips">Audio</string>
  <string name="title_settings">Settings</string>

  <string name="app_pacing">Run pacing in progress…</string>
  <string name="base_time_all">%1$s%2$s:%3$s:%4$s.%5$s</string>
  <string name="base_time_hms">%1$s%2$s:%3$s:%4$s</string>
  <string name="base_time_mss">%1$s%2$s:%3$s.%4$s</string>
  <string name="base_time_ms">%1$s%2$s:%3$s</string>
  <string name="base_time_s">%1$s%2$s.%3$s</string>
  <string name="label_distance">Distance:</string>
  <string name="label_distance2">Distance in lane %1$d</string>
  <string name="label_lane">Lane:</string>
  <string name="label_time">Time:</string>
  <string name="label_target_time">Target time:</string>
  <string name="label_target_time2">Target time</string>
  <string name="label_profile">Profile:</string>
  <string name="label_profile2">Profile</string>
  <string name="label_start">Start to Finish (%1$s):</string>
  <string name="nextup">Next up: %1$s</string>
  <string name="timeto">Time to target: %1$s</string>

  <string name="ok">OK</string>
  <string name="request_cancel">Cancel</string>
  <string name="request_continue">Continue</string>
  <string name="request_delete">Delete</string>

  <string name="edit_time_all">%1$s:%2$s.%3$s</string>
  <string name="edit_time_title">Edit %1$s</string>
  <string name="edit_hundredths">Hundredths</string>
  <string name="edit_seconds">Seconds</string>
  <string name="edit_minutes">Minutes</string>
  <string name="time_sep">:</string>
  <string name="hths_sep">.</string>
  <string name="delete_time">Delete</string>
  <string name="add_time">Add %1$s</string>
  <string name="set_time">Set to %1$s</string>

  <string name="fmr_title">"Flight mode?"</string>
  <string name="fmr_message">"Do you want to run without it?\nOr use network settings to turn it on?"</string>
  <string name="fmr_disable">"Disable reminder"</string>
  <string name="fmr_settings">Go to settings</string>
  <string name="fmr_run">Run</string>

  <string name="content_pacing_status">Pacing status</string>
  <string name="content_phone_status">Incoming call detection</string>
  <string name="content_start_delay">Start delay</string>
  <string name="content_edit_time">Edit time</string>

  <!-- Pro version <string name="content_edit_profile">Edit profile</string> -->
  <string name="content_edit_profile">Profile help</string>

  <string name="content_go">Start pacing</string>
  <string name="content_stop">Stop pacing</string>

  <string name="content_edit_cancel">Cancel edit</string>
  <string name="content_edit_mins">Time minutes</string>
  <string name="content_edit_secs">Time seconds</string>
  <string name="content_edit_hths">Time hundredths</string>
  <string name="content_time_add">Add time</string>
  <string name="content_time_set">Set time</string>
  <string name="content_close">Close (without saving)</string>

  <string name="content_fmr_cancel">Cancel run</string>

  <string name="start_and_finish">Start to finish</string>
  <string name="start_and_finish2">Start to finish markers</string>

  <string name="on_your_marks">On your marks</string>
  <string name="set">Set</string>

  <string name="laps_400">1 lap</string>
  <string name="laps_800">2 laps</string>
  <string name="laps_1000">2 and \u00BD laps</string>
  <string name="laps_1200">3 laps</string>
  <string name="laps_1500">3 and \u00BE laps</string>
  <string name="laps_2000">5 laps</string>
  <string name="laps_3000">7 and \u00BD laps</string>
  <string name="laps_4000">10 laps</string>
  <string name="laps_5000">12 and \u00BD laps</string>
  <string name="laps_10000">25 laps</string>
  <string name="laps_mile">4 and a bit laps</string>

  <string name="fl_200m">First lap is a \u00BD lap</string>
  <string name="fl_300m">First lap is a \u00BE lap</string>
  <string name="fl_mile">First lap is 9.34m extra</string>
  <string name="ll_200m">Last lap is a \u00BD lap</string>

  <string name="ll_2">Last lap is lap 2</string>
  <string name="ll_3">Last lap is lap 3</string>
  <string name="ll_4">Last lap is lap 4</string>
  <string name="ll_5">Last lap is lap 5</string>
  <string name="ll_8">Last lap is lap 8</string>
  <string name="ll_10">Last lap is lap 10</string>
  <string name="ll_13">Last lap is lap 13</string>
  <string name="ll_25">Last lap is lap 25</string>

  <string name="pace_dist">%1$s (%2$s)</string>
  <string name="pace_pace">%1$s (%2$s/km)</string>

  <string name="label_pace_run">Distance run (on pace):</string>
  <string name="pace_dist_run">%1$.2fm</string>

  <string name="save_result">Save</string>

  <string name="label_completion_pacing_on">Pacing on</string>
  <string name="label_completion_dist">Distance run</string>
  <string name="label_completion_prof">Profile</string>
  <string name="label_completion_tgt_time">Target time</string>
  <string name="label_completion_act_time">Actual time</string>
  <string name="label_completion_pce_result">Pacing result</string>

  <string name="completion_dist_label">Distance run (at \"%1$s\")</string>
  <string name="completion_dist">%1$s (%2$s in L%3$d)</string>

  <string name="completion_early">%1$s early</string>
  <string name="completion_seconds_early">%1$s seconds early</string>

  <string name="completion_late">%1$s late</string>
  <string name="completion_seconds_late">%1$s seconds late</string>

  <string name="label_completion_notes">Your notes:</string>

  <string name="pacing_history">Pacing history</string>
  <string name="title_past">Past</string>

  <string name="clips_audio">Clips &amp; Audio</string>
  <string name="settings">Settings</string>
</resources>