<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"

    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="56dp">

      <TextView
        android:id="@+id/edit_time_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:textColor="?android:textColorPrimary"
        android:textSize="32sp"/>

      <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"

        android:background="@null"
        android:contentDescription="@string/content_edit_cancel"
        android:src="@drawable/baseline_close_48"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      style="@style/picker_style">

      <NumberPicker
        android:id="@+id/min_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/content_edit_mins"
        android:theme="@style/picker_text">
      </NumberPicker>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/time_sep"/>

      <NumberPicker
        android:id="@+id/sec_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/content_edit_secs"
        android:theme="@style/picker_text">
      </NumberPicker>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/hths_sep"/>

      <NumberPicker
        android:id="@+id/hths_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/content_edit_hths"
        android:theme="@style/picker_text">
      </NumberPicker>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/edit_time_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/delete_time"/>

      <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <Button
        android:id="@+id/edit_time_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"

        android:contentDescription="@string/content_time_add"/>

      <Button
        android:id="@+id/edit_time_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/content_time_set"/>
      </LinearLayout>
    </LinearLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>