<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.run.RunFragment">

  <LinearLayout
    android:id="@+id/status_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="4dp"
    android:paddingHorizontal="4dp"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/pacing_status"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_gravity="center"
      android:gravity="center"

      android:contentDescription="@string/content_pacing_status"/>

    <Space
      android:layout_width="4dp"
      android:layout_height="match_parent"/>

    <ImageView
      android:id="@+id/phone_status"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_gravity="center"
      android:gravity="center"

      android:contentDescription="@string/content_phone_status"/>

    <Space
      android:layout_width="4dp"
      android:layout_height="match_parent"/>

    <TextView
      android:id="@+id/delay_setting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"

      android:textColor="?android:textColorPrimary"
      android:textSize="18sp"/>

    <Space
      android:layout_width="4dp"
      android:layout_height="match_parent"/>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/time_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/status_view">

    <TextView
      android:id="@+id/text_time"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:textColor="?android:textColorPrimary"
      android:textSize="50sp"
      android:gravity="center"

      android:maxLines="1"
      android:autoSizeTextType="uniform"/>

    <Space
      android:layout_width="match_parent"
      android:layout_height="8dp"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:orientation="vertical"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/time_view"
    app:layout_constraintBottom_toTopOf="@id/button_view">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:orientation="horizontal"
      android:layout_weight="1">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:textColor="?android:textColorPrimary"
          android:textSize="18sp"
          android:text="@string/label_distance"/>

        <Spinner
          android:id="@+id/spinner_distance"
          android:layout_width="192dp"
          android:layout_height="48dp"
          style="@style/spinner_style"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:textColor="?android:textColorPrimary"
          android:textSize="18sp"
          android:text="@string/label_lane"/>

        <Spinner
          android:id="@+id/spinner_lane"
          android:layout_width="70dp"
          android:layout_height="48dp"
          style="@style/spinner_style"/>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical"
      android:layout_weight="1">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:text="@string/label_time"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
          android:id="@+id/spinner_time"
          android:layout_width="210dp"
          android:layout_height="48dp"
          style="@style/spinner_style"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <ImageButton
            android:id="@+id/button_time"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintDimensionRatio="1:1"

            android:contentDescription="@string/content_edit_time"
            style="@style/edit_style"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical"
      android:layout_weight="1">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"

        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:text="@string/label_profile"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
          android:id="@+id/spinner_profile"
          android:layout_width="210dp"
          android:layout_height="48dp"
          style="@style/spinner_style"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <ImageButton
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintDimensionRatio="1:1"

            android:contentDescription="@string/content_edit_profile"
            style="@style/disabled_edit_style"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical"
      android:layout_weight="1">

      <TextView
        android:id="@+id/nextup_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"/>

      <ProgressBar
        android:id="@+id/nextup_progress"
        android:layout_width="285dp"
        android:layout_height="wrap_content"

        android:paddingTop="2dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"

        style="@android:style/Widget.ProgressBar.Horizontal"/>

      <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

      <TextView
        android:id="@+id/timeto_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"/>

      <ProgressBar
        android:id="@+id/timeto_progress"
        android:layout_width="285dp"
        android:layout_height="wrap_content"

        android:paddingTop="2dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"

        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progress="0"/>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/button_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    app:layout_constraintBottom_toBottomOf="parent">

    <ImageButton
      android:id="@+id/button_stop"
      android:layout_width="180dp"
      android:layout_height="80dp"

      android:contentDescription="@string/content_stop"
      android:scaleType="centerInside"/>

    <ImageButton
      android:id="@+id/button_go"
      android:layout_width="180dp"
      android:layout_height="80dp"

      android:contentDescription="@string/content_go"
      android:scaleType="centerInside"/>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>