<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.completion.CompletionFragment">

  <LinearLayout
    android:id="@+id/status_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="4dp"
    android:paddingHorizontal="4dp"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/pacing_status"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_gravity="center"
      android:gravity="center"

      android:contentDescription="@string/content_pacing_status"/>

    <Space
      android:layout_width="4dp"
      android:layout_height="match_parent"/>

    <ImageView
      android:id="@+id/phone_status"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_gravity="center"
      android:gravity="center"

      android:contentDescription="@string/content_phone_status"/>

    <Space
      android:layout_width="4dp"
      android:layout_height="match_parent"/>

    <TextView
      android:id="@+id/delay_setting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"

      android:textColor="?android:textColorPrimary"
      android:textSize="18sp"/>

    <Space
      android:layout_width="4dp"
      android:layout_height="match_parent"/>
  </LinearLayout>

  <Space
    android:id="@+id/status_view_spacer"
    android:layout_width="match_parent"
    android:layout_height="8dp"

    app:layout_constraintTop_toBottomOf="@id/status_view"/>

  <TextView
    android:id="@+id/completion_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/status_view_spacer"

    android:textColor="?android:textColorPrimary"
    android:textSize="42sp"
    android:text="Pacing result"

    android:maxLines="1"
    android:autoSizeTextType="uniform"/>

  <Space
    android:id="@+id/completion_view_spacer"
    android:layout_width="match_parent"
    android:layout_height="32dp"

    app:layout_constraintTop_toBottomOf="@id/completion_view"/>

  <LinearLayout
    android:id="@+id/completion_button_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal"

    android:paddingTop="10dp"

    app:layout_constraintBottom_toBottomOf="parent">

    <ImageButton
      android:id="@+id/button_close"
      android:layout_width="180dp"
      android:layout_height="80dp"

      android:src="@drawable/baseline_delete_forever_48"
      android:contentDescription="@string/content_close"
      android:scaleType="centerInside"/>

    <Button
      android:id="@+id/button_save"
      android:layout_width="176dp"
      android:layout_height="80dp"
      android:layout_marginLeft="4dp"

      android:text="@string/save_result"
      android:textSize="25sp"/>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>